# DAPA.Api/Controllers/OrderController.cs
@@ -2,9 +2,15 @@
 using DAPA.Database.Clients;
 using DAPA.Database.Discounts;
 using DAPA.Database.Orders;
+using DAPA.Database.Reservations;
+using DAPA.Database.Services;
 using DAPA.Database.Staff;
+using DAPA.Database.WorkingHours;
 using DAPA.Models;
 using DAPA.Models.Public.Orders;
+using DAPA.Models.Public.Reservations;
+using DAPA.Models.Public.Services;
+using DAPA.Models.Public.WorkingHours;
 using Microsoft.AspNetCore.Mvc;
 
 namespace DAPA.Api.Controllers;
@@ -191,5 +197,66 @@ public class OrderController : ControllerBase
         }
 
         return NoContent();
+    }
+
+    [HttpGet("total/{id}")]
+    public async Task<ActionResult<List<WorkingHoursResponse>>> GetTotalByOrderId(int orderId)
+    {
+        return Ok();
+        /*List<WorkingHoursDto> available = new();
+
+        try
+        {
+            WorkingHoursFindRequest request = new();
+            request.StaffId = staffId;
+            var workingHours = await _workingHoursRepository.GetAllAsync(request);
+            foreach (WorkingHour el in workingHours)
+            {
+                available.Add(new WorkingHoursDto { Start = el.StartTime, End = el.EndTime });
+            }
+        }
+        catch (Exception)
+        {
+            return StatusCode(StatusCodes.Status500InternalServerError);
+        }
+
+        try
+        {
+            ReservationFindRequest request = new();
+            request.StaffId = staffId;
+            var reservations = await _reservationRepository.GetAllAsync(request);
+            foreach (Models.Reservation el in reservations)
+            {
+                DateTime end;
+                Console.WriteLine($"++++++++");
+                Console.WriteLine($"{el.ServiceId}");
+                Console.WriteLine($"{el.StaffId}");
+                Console.WriteLine($"{el.DateTime}");
+
+                try
+                {
+                    ServiceFindRequest request1 = new();
+                    request1.Id = el.ServiceId;
+                    var service = await _serviceRepository.GetAllAsync(request1);
+                    Models.Service el2 = service.First();
+
+                    Console.WriteLine($"********");
+                    Console.WriteLine($"{el2.Duration}");
+                    Console.WriteLine($"{el2.Id}");
+                    end = el.DateTime.AddHours(el2.Duration);
+                    Console.WriteLine($"{end}");
+                }
+                catch (Exception)
+                {
+                    return StatusCode(StatusCodes.Status500InternalServerError);
+                }
+                RemoveBusyHours(available, el.DateTime, end);
+            }
+            return Ok(available);
+        }
+        catch (Exception)
+        {
+            return StatusCode(StatusCodes.Status500InternalServerError);
+        }*/
     }
 }
